# Log-Manager

./: .gitignore  alembic.ini  config.py  database.py  db_query_functions.py  log_setups.py  main.py  pyproject.toml  temp.py  web_routes.py  webpage_plan.md
alembic_migrations/: env.py
alembic_migrations/versions/: 0688943ace65_true_msisdn_field_for_soaplogs.py  0be93f57379e_true_imsi_true_msisdn_fields_and_indexes.py  4037a8381ee9_node_name_field_in_log_tables.py  55c2de672362_new_model_for_soaplogs.py  98e22eb1f76a_commandlogmodel.py  a10efb665080_true_imsi_true_msisdn_fields_as_.py  be34808785da_adding_agentlog_table.py
api/: query_routes.py  service_routes.py
api/schemas/: agentlog_schemas.py  commandlog_schemas.py  soaplog_schemas.py
log_management_scripts/: collect_logs_and_cleanup.py  ensure_log_folder_structure.py  insert_logs_to_db.py
models/: agentlog_model.py  commandlog_model.py  soaplog_model.py
schemas/: agentlog_schema.py
static/css/: main.css  search_forms.css
static/js/: agentlogs.js  commandlogs.js  main.js  pagination.js  soaplogs.js
templates/: agentlogs.html  base.html  commandlogs.html  index.html  soaplogs.html
templates/partials/: agentlog_scripts.html  agentlog_styles.html  commandlog_scripts.html  detail_modal.html  error_alert.html  loading_spinner.html  pagination.html  soaplog_scripts.html
